--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,21 +9,20 @@
     <link rel="stylesheet" href="CSS/Style.css">
 
 </head>
+
 <body>
     <header>
         <nav>
-            <ul class="nav-lista">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Contactos</a></li>
-            </ul>
+            <div class="container-nav">
+                <ul class="nav-lista">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Contactos</a></li>
+                </ul>
 
-            <div class="titulo">
                 <h1>Dream Ageney</h1>
-            </div>
 
-            <div class="botones-nav">
                 <button>Facebook</button>
                 <button>Linkedlin</button>
                 <button>Instagram</button>
@@ -30,4 +30,5 @@
         </nav>
     </header>
 </body>
+
 </html>
