--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -24,11 +24,16 @@
                 <h1>Dream Ageney</h1>
 
                 <button>Facebook</button>
-                <button>Linkedlin</button>
+                <button>Linkedlink</button>
                 <button>Instagram</button>
+
             </div>
         </nav>
     </header>
+
+    <main>
+        
+    </main>
 </body>
 
 </html>
