--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -32,7 +32,16 @@
     </header>
 
     <main>
-        
+        <section>
+            <div class="container-inicio">
+                <h1> Te ayudamos a hacer crecer tu negocio </h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium alias tempore modi perferendis,
+                    hic debitis obcaecati harum aut, molestiae sint rerum eligendi nam voluptas quo saepe eum quis?
+                    Quae, consectetur!</p>
+                <a class="button-inicio" href="">Get Started</a>
+                <img src="img/Imagen inicio.jpeg" alt="imagen-inicio">
+            </div>
+        </section>
     </main>
 </body>
 
