--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -42,6 +42,71 @@
                 <img src="img/Imagen inicio.jpeg" alt="imagen-inicio">
             </div>
         </section>
+
+        <div class="titulo-servicio">
+            <h3>
+                <b>Lo que hacemos</b><br> para tu negocio
+            </h3>
+        </div>
+
+        <div class="container">
+            <div class="cards">
+                <div class="card-img">
+                    <img src="img/WhatsApp Image 2023-02-14 at 6.48.07 PM.jpeg" alt="Info">
+                </div>
+                <div class="card-body">
+                    <h2>
+                        WEBSITE DESIGN
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis eos excepturi autem
+                        iusto! Sunt ex eos, fuga voluptatum voluptas deleniti facere dicta. Ducimus, voluptate
+                        atque. Autem qui voluptatem rem repellat!
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <button>Leer Mas</button>
+                </div>
+            </div>
+
+            <div class="cards">
+                <div class="card-img">
+                    <img src="img/carro.jpg" alt="Info">
+                </div>
+                <div class="card-body">
+                    <h2>
+                        WEB DEVELOPMENT
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis eos excepturi autem
+                        iusto! Sunt ex eos, fuga voluptatum voluptas deleniti facere dicta. Ducimus, voluptate
+                        atque. Autem qui voluptatem rem repellat!
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <button>Leer Mas</button>
+                </div>
+            </div>
+
+            <div class="cards">
+                <div class="card-img">
+                    <img src="img/Marcas aliadas.jpg" alt="Info">
+                </div>
+                <div class="card-body">
+                    <h2>
+                        MOBILE APP DEVELOPMENT
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis eos excepturi autem
+                        iusto! Sunt ex eos, fuga voluptatum voluptas deleniti facere dicta. Ducimus, voluptate
+                        atque. Autem qui voluptatem rem repellat!
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <button>Leer Mas</button>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
