--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="cards">
                 <div class="card-img">
-                    <img src="img/WhatsApp Image 2023-02-14 at 6.48.07 PM.jpeg" alt="Info">
+                    <img src="img/webdesing.jpeg" alt="Info">
                 </div>
                 <div class="card-body">
                     <h2>
@@ -71,7 +71,7 @@
 
             <div class="cards">
                 <div class="card-img">
-                    <img src="img/carro.jpg" alt="Info">
+                    <img src="img/development.jpeg" alt="Info">
                 </div>
                 <div class="card-body">
                     <h2>
@@ -90,7 +90,7 @@
 
             <div class="cards">
                 <div class="card-img">
-                    <img src="img/Marcas aliadas.jpg" alt="Info">
+                    <img src="img/mobile.jpeg" alt="Info">
                 </div>
                 <div class="card-body">
                     <h2>
