--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -38,8 +38,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium alias tempore modi perferendis,
                     hic debitis obcaecati harum aut, molestiae sint rerum eligendi nam voluptas quo saepe eum quis?
                     Quae, consectetur!</p>
-                <a class="button-inicio" href="">Get Started</a>
-                <img src="img/Imagen inicio.jpeg" alt="imagen-inicio">
+                <button>Get Started</button>
+                <img src="img/imagen inicio.jpeg" alt="imagen-inicio">
             </div>
         </section>
 
@@ -64,9 +64,6 @@
                         atque. Autem qui voluptatem rem repellat!
                     </p>
                 </div>
-                <div class="card-footer">
-                    <button>Leer Mas</button>
-                </div>
             </div>
 
             <div class="cards">
@@ -82,9 +79,6 @@
                         iusto! Sunt ex eos, fuga voluptatum voluptas deleniti facere dicta. Ducimus, voluptate
                         atque. Autem qui voluptatem rem repellat!
                     </p>
-                </div>
-                <div class="card-footer">
-                    <button>Leer Mas</button>
                 </div>
             </div>
 
@@ -102,11 +96,21 @@
                         atque. Autem qui voluptatem rem repellat!
                     </p>
                 </div>
-                <div class="card-footer">
-                    <button>Leer Mas</button>
-                </div>
             </div>
         </div>
+
+        <div class="container-nosotros">
+            <img src="img/imagen nosotros.jpeg" alt="">
+            <h2>
+                Acerca de <br> Nosotros
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, temporibus. Dolorum at quia ullam quasi velit suscipit vel mollitia nostrum facere beatae ducimus, nisi earum architecto nobis adipisci accusamus doloremque. <br> <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio blanditiis magni, eos neque officia laudantium aspernatur eveniet, facere ex dolores at distinctio ab laboriosam quis illum? Sed recusandae voluptatibus fuga!
+            </p>
+            <button>Explore More</button>
+        </div>
+
     </main>
 </body>
 
