--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -105,13 +105,89 @@
                 Acerca de <br> Nosotros
             </h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, temporibus. Dolorum at quia ullam quasi velit suscipit vel mollitia nostrum facere beatae ducimus, nisi earum architecto nobis adipisci accusamus doloremque. <br> <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio blanditiis magni, eos neque officia laudantium aspernatur eveniet, facere ex dolores at distinctio ab laboriosam quis illum? Sed recusandae voluptatibus fuga!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, temporibus. Dolorum at quia ullam
+                quasi velit suscipit vel mollitia nostrum facere beatae ducimus, nisi earum architecto nobis adipisci
+                accusamus doloremque. <br> <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio blanditiis magni, eos neque officia
+                laudantium aspernatur eveniet, facere ex dolores at distinctio ab laboriosam quis illum? Sed recusandae
+                voluptatibus fuga!
             </p>
             <button>Explore More</button>
         </div>
 
+        <div class="container-trabajos">
+            <h2>
+                <b>Trabajos realizados</b> <br> Por nuestros expertos
+            </h2>
+
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos asperiores earum voluptas explicabo
+                deserunt labore facere iure reiciendis quae distinctio cumque sequi ut, nihil, incidunt dolore! Quam
+                optio reiciendis porro.
+            </p>
+        </div>
+
+        <div class="container">
+            <div class="cards">
+                <div class="card-img-job">
+                    <img src="img/trabajo2.png" alt="Info">
+                </div>
+                <div class="card-body">
+                    <h2>
+                        UI SOUP
+                    </h2>
+                </div>
+            </div>
+
+            <div class="cards">
+                <div class="card-img-job">
+                    <img src="img/trabajo1.png" alt="Info">
+                </div>
+                <div class="card-body">
+                    <h2>
+                        Goldcrown Labs
+                    </h2>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <div class="container-footer">
+            <div class="texto-footer">
+                <h2>
+                    Dream Agency
+                </h2>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, ad nostrum. At, veniam error
+                    obcaecati esse et vitae distinctio veritatis omnis corporis aut quisquam autem praesentium. Deserunt
+                    excepturi commodi molestiae!
+                </p>
+
+                <a href="#">GET IN TOUCH</a>
+            </div>
+
+            <div class="formulaio-footer">
+                <div class="footer-name">
+                    <input type="text" name="" id="nombre">
+                </div>
+                <div class="footer-email">
+                    <input type="email" name="" id="email">
+                </div>
+                <div class="footer-phone">
+                    <input type="text" id="telefono">
+                </div>
+                <div class="footer-pais">
+                    <input type="text" id="pais">
+                </div>
+                <div class="footer-textarea">
+                    <textarea name="" id="comentario" cols="30" rows="10"></textarea>
+                </div>
+                <button>ENVIAR</button>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
