--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -150,11 +150,43 @@
                 </div>
             </div>
         </div>
-        
+
+        <div class="container-comentarios">
+            <h2>
+                Nuestro testimonio <br> Lo que dicen nuestros clientes
+
+            </h2>
+
+            <div class="comentarios-grid">
+                <div class="posicion1">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, saepe. Officiis necessitatibus
+                        cum enim? Sunt voluptate non ipsam ipsum commodi! Sequi dignissimos cupiditate autem inventore
+                        consequatur sint libero excepturi unde!
+                    </p>
+                    <ul>
+                        <li>UI SOUP</li>
+                    </ul>
+                </div>
+                <div class="posicion2">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, libero necessitatibus, tempore
+                        mollitia nobis explicabo sapiente, harum iste quaerat tenetur vitae reiciendis repellendus a
+                        recusandae ea. Ducimus voluptas fugiat enim.
+                    </p>
+
+                    <ul>
+                        <li>UI SOUP</li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 
