--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dream Ageney</title>
+    <title>Dream Agency</title>
+    <script src="https://kit.fontawesome.com/c8c9463c4f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/Style.css">
 
 </head>
@@ -21,11 +22,13 @@
                     <li><a href="#">Contactos</a></li>
                 </ul>
 
-                <h1>Dream Ageney</h1>
+                <h1>Dream Agency</h1>
 
-                <button>Facebook</button>
-                <button>Linkedlink</button>
-                <button>Instagram</button>
+                <ul class="social">
+                <li><a href="#" class="fa fa-facebook"></a></li>
+                <li><a href="#" class="fa fa-instagram"></a></li>
+                <li><a href="#" class="fa fa-twitter"></a></li>
+            </ul>
 
             </div>
         </nav>
@@ -186,7 +189,7 @@
     </main>
 
     <footer>
-
+        
     </footer>
 </body>
 
