--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -37,7 +37,8 @@
     <main>
         <section>
             <div class="container-inicio">
-                <h1> Te ayudamos a hacer crecer tu negocio </h1>
+                <h1> <b>Te ayudamos</b> a hacer crecer tu negocio </h1>
+                <div class="rectangulo"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium alias tempore modi perferendis,
                     hic debitis obcaecati harum aut, molestiae sint rerum eligendi nam voluptas quo saepe eum quis?
                     Quae, consectetur!</p>
