--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -189,7 +189,54 @@
     </main>
 
     <footer>
-        
+        <div class="container-footer">
+            <div class="left section">
+                <h1>Dream Agency</h1>
+                <div class="content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="button">
+                    <button>GET IN TOUCH</button>
+                </div> 
+                </div>               
+            </div>
+            <div class="right section">
+                <div class="content">
+                    <div class="text">
+                        <input type="text" name="" >
+                    </div>
+                    <div class="text">
+                        <input type="text" name="" >
+                    </div>
+                    <div class="textarea">
+                        <textarea placeholder="Description"></textarea>
+                    </div>
+                    <div class="button">
+                        <button>Enviar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="right2 section">
+                <div class="content">
+                    <div class="text">
+                        <input type="text" name="">
+                    </div>
+                    <div class="text">
+                        <input type="text" name="">
+                    </div>
+                    <div class="icon">
+                        <ul class="icons">
+                <li><a href="" class="fa fa-phone"></a> +57 318-899-0695</li>
+                <li><a href="" class="fa fa-envelope"></a> contact@dreamagency.ca</li>
+                </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
