--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -38,22 +38,24 @@
         <section>
             <div class="container-inicio">
                 <h1> <b>Te ayudamos</b> a hacer crecer tu negocio </h1>
-                <div class="rectangulo"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium alias tempore modi perferendis,
                     hic debitis obcaecati harum aut, molestiae sint rerum eligendi nam voluptas quo saepe eum quis?
                     Quae, consectetur!</p>
+                    <div class="rectangulo"></div>
                 <button>Get Started</button>
                 <img src="img/imagen inicio.jpeg" alt="imagen-inicio">
             </div>
         </section>
 
+        <div class="servicio">
         <div class="titulo-servicio">
             <h3>
                 <b>Lo que hacemos</b><br> para tu negocio
             </h3>
         </div>
+        <div class="rectangulo-negocios"></div>
 
-        <div class="container">
+        <div class="container-ser">
             <div class="cards">
                 <div class="card-img">
                     <img src="img/webdesing.jpeg" alt="Info">
@@ -102,6 +104,11 @@
                 </div>
             </div>
         </div>
+    </div>
+ 
+        <div class="eclipse"></div>
+   
+   
 
         <div class="container-nosotros">
             <img src="img/imagen nosotros.jpeg" alt="">
@@ -116,6 +123,9 @@
                 laudantium aspernatur eveniet, facere ex dolores at distinctio ab laboriosam quis illum? Sed recusandae
                 voluptatibus fuga!
             </p>
+           
+            <div class="rectangulo-nosotros"></div>
+
             <button>Explore More</button>
         </div>
 
