--- a/Parcial 1/index.html
+++ b/Parcial 1/index.html
@@ -135,7 +135,7 @@
                 quasi velit suscipit vel mollitia nostrum facere beatae ducimus, nisi earum architecto nobis adipisci
                 accusamus doloremque. <br> <br>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio blanditiis magni, eos neque officia
-                laudantium aspernatur eveniet, facere ex dolores at distinctio ab laboriosam quis illum? Sed recusandae
+                laudantium aspernatur eveniet, facsere ex dolores at distinctio ab laboriosam quis illum? Sed recusandae
                 voluptatibus fuga!
             </p>
            
@@ -231,7 +231,7 @@
                 tempor incididunt ut labdore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis ndostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolodre eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                csillum dolodre eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <div class="button">
                     <button>GET IN TOUCH</button>
